<resources>
    <string name="app_name">RoadStar Courier</string>
    <string name="app_name_heading">RoadStar Courier </string>
    <string name="action_settings">Settings</string>
    <string name="action_signingIn">Signing In</string>
    <string name="action_signingUp">Signing Up</string>
    <string name="action_updating">Updating</string>
    <string name="action_logging_out">Logging Out</string>
    <string name="action_sending_invoice">Sending Invoice</string>
    <string name="action_processing">Processing</string>
    <string name="action_deleting">Deleting</string>
    <string name="action_success">Success</string>
    <string name="action_pleasewait">Please Wait...</string>
    <string name="action_loading">Loading</string>
    <string name="action_saving">Saving</string>
    <string name="action_error">Sorry</string>
    <string name="action_verifying">Verifying</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_retry">Retry</string>
    <string name="action_ok">OK</string>
    <string name="fragment_edit">Edit</string>
    <string name="action_cancel_alert">CANCEL</string>
    <string name="alert_nointernet">No Internet Connection</string>
    <string name="alert_no_gps">GPS not Enabled !!!</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="alert_nointernet_message">You are offline please check your internet connection</string>
    <string name="alert_servererror">Server Error</string>
    <string name="alert_gpsEnable">Enable GPS to locate your location</string>
    <string name="alert_nocar">Sorry! We do not provide services in your city yet.</string>
    <string name="alert_update_location">Updating Your Location</string>
    <string name="action_session_expired_title">Session Expired</string>
    <string name="action_session_expired_message">Please re-login to renew your session</string>
    <string name="action_unable_to_create_map">Unable to create map. Install Google Play service To View Location !!!</string>
    <string name="signin_main_label_Signin">SIGN IN</string>
    <string name="signin_main_label_register">REGISTER</string>
    <string name="login_label">SIGN IN</string>
    <string name="login_label_forgotpwd">Forgot Password?</string>
    <string name="login_label_email_hint">Email Address</string>
    <string name="login_label_pwd_hint">Password</string>
    <string name="login_label_login">Sign In</string>
    <string name="login_label_alert_username">Email address can\'t be empty</string>
    <string name="login_label_alert_email_invalid">Email address is invalid</string>
    <string name="login_label_alert_password">Password can\'t be empty</string>
    <string name="login_label_alert_signIn_failed">Sign In Failed</string>
    <string name="login_label_facecook_login">Facebook Log in</string>
    <string name="login_label_facecook_login_app">Sign in with Facebook</string>
    <string name="login_label_facecook_login_re">Sign up with Facebook</string>
    <string name="login_label_or">OR</string>
    <string name="register_label">Register</string>
    <string name="register_label_email_hint">Email</string>
    <string name="register_label_email_me_hint">Email Me</string>
    <string name="register_label_pwd_hint">Password</string>
    <string name="register_label_cnf_pwd_hint">Confirm Password</string>
    <string name="register_label_username_hint">Name</string>
    <string name="register_label_phone_hint">Mobile Number</string>
    <string name="register_label_code_hint">Code</string>
    <string name="register_label_dummy_text">By Continuing , i agree RoadStar Courier\'s User Agreement and Terms of Services</string>
    <string name="login_label_privacypolicy">By Continuing, I agree RoadStar Courier\'s</string>
    <string name="login_label_Terms_of_service">User Agreement</string>
    <string name="login_label_and">and</string>
    <string name="login_label_Privacy_Policy">Terms of Services</string>
    <string name="register_label_referal_hint">Referral Code(Optional)</string>
    <string name="register_label_register">REGISTER</string>
    <string name="register_label_create_account">Create Account</string>
    <string name="register_label_alert_username">UserName can\'t be empty</string>
    <string name="register_label_alert_password">Password must be at least 6 characters.</string>
    <string name="register_label_alert_email">Email address is invalid</string>
    <string name="register_label_alert_email_register">Email should not empty</string>
    <string name="register_label_alertpassword_register">Password should not empty</string>
    <string name="register_label_alert_email_empty">Please Enter your Email</string>
    <string name="register_label_alert_phoneNo">Enter phone number between 6 to 15</string>
    <string name="register_label_alert_country_code">Enter country code</string>
    <string name="register_label_alert_pass_not_match">Password does not match</string>
    <string name="register_label_referal_schema">Referral Schema!</string>
    <string name="register_label_referal_ok">OK</string>
    <string name="register_label_referal_schema_content1">Enter a referral code here to earn free ride coupons.</string>
    <string name="register_label_referal_schema_content2">Note : Referral schema is only applicable for users who have never booked an Wsalna Taxi Passenger cab before.</string>
    <string name="login_label_alert_register_failed">Registration Failed</string>
    <string name="otp_label_verification">Verify Mobile</string>
    <string name="otp_label_enter_otp">Enter OTP</string>
    <string name="otp_label_send">Submit</string>
    <string name="action_otp">Verifying</string>
    <string name="otp_label_alert_otp">OTP can\'t be empty</string>
    <string name="otp_label_alert_invalid">OTP is invalid</string>
    <string name="forgot_password_email_label_title">Forgot Password</string>
    <string name="forgot_password_email_label_enter_email">Email Address</string>
    <string name="forgot_password_email_label_send_email">E-mail Me</string>
    <string name="forgot_password_email_label_enter_valid_email">Email address is invalid</string>
    <string name="forgot_password_email_label_success">Verification code has been sent to your registered mobile number</string>
    <string name="reset_password_label_title">RESET PASSWORD</string>
    <string name="reset_password_label_email">Email Address</string>
    <string name="reset_password_label_enter_new_password">New Password</string>
    <string name="reset_password_label_show_password_text">Show Password</string>
    <string name="reset_password_email_label_enter_valid_email">Enter valid email</string>
    <string name="reset_password_email_label_enter_valid_password">Password can\'t be empty</string>
    <string name="action_alert_empty_email">Email address cannot be empty</string>
    <string name="action_alert_invalid_email">Email address is invalid</string>
    <string name="navigation_label_bookmyride">Book My Ride</string>
    <string name="navigation_label_myride">My Rides</string>
    <string name="navigation_label_money">RoadStar Courier Money</string>
    <string name="navigation_label_invite">Invite &amp; Earn</string>
    <string name="navigation_label_ratecard">Rate Card</string>
    <string name="navigation_label_emergency">Emergency Contact</string>
    <string name="navigation_label_report_issue">Report Issues</string>
    <string name="navigation_label_feedback">Feedback</string>
    <string name="navigation_label_setting">Settings</string>
    <string name="navigation_label_contactus">Contact us</string>
    <string name="navigation_label_terms">Terms &amp; Condition</string>
    <string name="navigation_label_aboutus">About Us</string>
    <string name="action_email_toAddress">info@zoplay.com</string>
    <string name="loading">Loading..</string>
    <string name="aboutus_lable_header_wsalnawithus">Try use RoadStar Courier with us</string>
    <string name="joinus_lable_header_textview">Join RoadStar Courier as a driver</string>
    <string name="wsalnawithus">-	RoadStar Courier in Egypt and Saudi Arabia announces the activation of the delivery service within the Arab Republic of Egypt and the Kingdom through a fleet of modern cars 24 hours a day. This service provides a car reservation with the required specifications and information about the driver and determines the distance of the journey and its value and accuracy and efficiency of the companys staff.
-	The company also applies the points system by adding 15 points to the account of any new customer deducted from the first journey with us and add 2 points for each customer using the service came through you through the promotional code, which you will get by registration and your first journey with us.
-	The company also announces the addition of a transport service of goods, cars and the use of transport vehicles of all types and SATHA, which allows access to all cars of all types in the service of private cars and transport and SATHA
</string>
    <string name="wsalnajoinus">-	RoadStar Courier in Egypt and Saudi Arabia announces the start of registration and receipt of applications to join the company to provide the service by use your private car or rental car , achieve an additional income up to 5000 thousand pounds / riyals per month by visiting the headquarters of the company required papers
-	Tree System (you will receive 2% for 6 months for each driver joining RoadStar Courier through you provided that the Service is published and used by at least 10 people)
</string>
    <string name="home_label_ride_later">RIDE LATER</string>
    <string name="home_label_ride_now">BOOK NOW</string>
    <string name="home_label_cancel">CANCEL</string>
    <string name="home_label_confirm">CONFIRM</string>
    <string name="home_label_fromNow">from now</string>
    <string name="home_label_confirmation">CONFIRMATION</string>
    <string name="home_label_invalid_pickUp">Invalid pickup location</string>
    <string name="home_label_invalid_drop">Invalid Drop location</string>
    <string name="gps_label_title">Use Location?</string>
    <string name="gps_label_text1">This app wants to change your</string>
    <string name="gps_label_text2">device settings:</string>
    <string name="gps_label_text3">Use GPS,Wi-Fi and cell networks</string>
    <string name="gps_label_text4">for location</string>
    <string name="gps_label_no">No</string>
    <string name="gps_label_yes">Yes</string>
    <string name="alert_label_title">Sorry</string>
    <string name="alert_label_ok">OK</string>
    <string name="alert_label_content1">We could not accept your request</string>
    <string name="alert_label_content2">No cabs has been available at your place. Kindly try again after sometime</string>
    <string name="alert_label_ridelater_title">Invalid pickup time</string>
    <string name="alert_label_ridelater_content">Please make sure that pickup time is at least after an hour from now</string>
    <string name="ridenow_label_ratecard">Rate Card</string>
    <string name="update">Update</string>
    <string name="enter_amount_here_in_usd">Enter Amount Here in USD</string>
    <string name="digits_amount">1234567890.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome back,</string>
    <string name="signito">Sign in to continue</string>
    <string name="emailadd">Email Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember me and keep me logged in</string>
    <string name="text">- Or you can also -</string>
    <string name="googlesignin">Sign in with google</string>
    <string name="next">Next</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email_to_continue">Enter email to continue,</string>
</resources>