<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorwhite">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:padding="@dimen/size_3"
            android:layout_marginTop="@dimen/size_20"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginRight="@dimen/size_20"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="90dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/roadstarlogo" />








        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:fontFamily="@font/arialbd"
            android:layout_gravity="left|center"
            android:gravity="left"
            android:padding="@dimen/size_5"
            android:layout_marginTop="@dimen/size_16"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginRight="@dimen/size_20"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/size_16"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_email_to_continue"
            android:fontFamily="@font/ariallg"
            android:layout_gravity="left|center"
            android:gravity="left"
            android:padding="@dimen/size_5"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginRight="@dimen/size_20"
            android:layout_marginBottom="@dimen/size_18"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/size_14"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/size_16"
            android:background="@drawable/whitebg"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emailadd"
                android:fontFamily="@font/arialbd"
                android:layout_gravity="left|center"
                android:gravity="left"
                android:padding="@dimen/size_5"
                android:layout_marginTop="@dimen/size_50"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_marginRight="@dimen/size_20"
                android:textColor="@color/colordarkgrey"
                android:textSize="@dimen/size_14"
                />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/arialbd"
                android:layout_gravity="left|center"
                android:gravity="left"
                android:paddingBottom="@dimen/size_18"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_marginRight="@dimen/size_20"
                android:backgroundTint="@color/colorlightgrey"
                android:textColorHint="@color/colordarkgrey"
                android:textColor="@color/colordarkgrey"
                android:textSize="@dimen/size_12"
                />




            <TextView
                android:id="@+id/btn_frpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textAllCaps="true"
                android:fontFamily="@font/arialbd"
                android:gravity="center"
                android:layout_marginBottom="@dimen/size_20"
                android:background="@drawable/full_circle_booking"
                android:padding="@dimen/size_12"
                android:layout_marginTop="@dimen/size_50"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_marginRight="@dimen/size_20"
                android:textColor="@color/colorwhite"
                android:textSize="@dimen/size_14"
                />





        </LinearLayout>














    </LinearLayout>


</RelativeLayout>