<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:textDirection="anyRtl">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorwhite"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:padding="@dimen/size_3"
                android:layout_marginTop="@dimen/size_20"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_marginRight="@dimen/size_20"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    app:srcCompat="@drawable/roadstarlogo" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_signin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in"
                        android:fontFamily="@font/ariallg"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:layout_marginLeft="@dimen/size_10"
                        android:layout_marginRight="@dimen/size_10"
                        android:textColor="@color/colorwhite"
                        android:textSize="@dimen/size_14"
                        />

                    <View
                        android:layout_marginTop="2dp"
                        android:layout_width="45dp"
                        android:layout_height="1dp"
                        android:layout_marginLeft="@dimen/size_10"
                        android:layout_marginRight="@dimen/size_10"
                        android:layout_gravity="right"
                        android:background="@color/colorwhite"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:fontFamily="@font/ariallg"
                    android:layout_gravity="center|center_vertical"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/size_10"
                    android:layout_marginRight="@dimen/size_10"
                    android:textColor="@color/colorwhite"
                    android:textSize="@dimen/size_14"
                    />






            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:fontFamily="@font/arialbd"
                android:layout_gravity="left|center"
                android:gravity="left"
                android:padding="@dimen/size_5"
                android:layout_marginTop="@dimen/size_16"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_marginRight="@dimen/size_20"
                android:textColor="@color/colorwhite"
                android:textSize="@dimen/size_16"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signito"
                android:fontFamily="@font/ariallg"
                android:layout_gravity="left|center"
                android:gravity="left"
                android:padding="@dimen/size_5"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_marginRight="@dimen/size_20"
                android:layout_marginBottom="@dimen/size_18"
                android:textColor="@color/colorwhite"
                android:textSize="@dimen/size_14"
                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_16"
                android:background="@drawable/whitebg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emailadd"
                    android:fontFamily="@font/arialbd"
                    android:layout_gravity="left|center"
                    android:gravity="left"
                    android:padding="@dimen/size_5"
                    android:layout_marginTop="@dimen/size_20"
                    android:layout_marginLeft="@dimen/size_20"
                    android:layout_marginRight="@dimen/size_20"
                    android:textColor="@color/colordarkgrey"
                    android:textSize="@dimen/size_14"
                    />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/arialbd"
                    android:layout_gravity="left|center"
                    android:gravity="left"
                    android:paddingBottom="@dimen/size_18"
                    android:layout_marginLeft="@dimen/size_20"
                    android:layout_marginRight="@dimen/size_20"
                    android:backgroundTint="@color/colorlightgrey"
                    android:textColorHint="@color/colordarkgrey"
                    android:textColor="@color/colordarkgrey"
                    android:textSize="@dimen/size_12"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:fontFamily="@font/arialbd"
                    android:layout_gravity="left|center"
                    android:gravity="left"
                    android:padding="@dimen/size_5"
                    android:layout_marginTop="@dimen/size_10"
                    android:layout_marginLeft="@dimen/size_20"
                    android:layout_marginRight="@dimen/size_20"
                    android:textColor="@color/colordarkgrey"
                    android:textSize="@dimen/size_14"
                    />

                <EditText
                    android:id="@+id/edt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:fontFamily="@font/arialbd"
                    android:layout_gravity="left|center"
                    android:gravity="left"
                    android:paddingBottom="@dimen/size_20"
                    android:layout_marginLeft="@dimen/size_20"
                    android:layout_marginRight="@dimen/size_20"
                    android:backgroundTint="@color/colorlightgrey"
                    android:textColorHint="@color/colordarkgrey"
                    android:textColor="@color/colordarkgrey"
                    android:textSize="@dimen/size_12"
                    />


                <TextView
                    android:id="@+id/tv_forgtpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgotpassword"
                    android:fontFamily="@font/arialbd"
                    android:gravity="right"
                    android:padding="@dimen/size_5"
                    android:layout_marginLeft="@dimen/size_20"
                    android:layout_marginRight="@dimen/size_20"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/size_12"
                    />


                <CheckBox
                    android:id="@+id/cb_remember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remember"
                    android:fontFamily="@font/arialbd"
                    android:textColor="@color/colorgrey"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/size_12"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/size_16"
                    android:layout_marginLeft="@dimen/size_20"
                    android:layout_marginRight="@dimen/size_20"/>



                <TextView
                    android:id="@+id/btn_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:background="@drawable/full_circle_booking"
                    android:padding="@dimen/size_12"
                    android:layout_marginTop="@dimen/size_20"
                    android:layout_marginLeft="@dimen/size_20"
                    android:layout_marginRight="@dimen/size_20"
                    android:textColor="@color/colorwhite"
                    android:fontFamily="@font/arialbd"
                    android:textSize="@dimen/size_12"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text"
                    android:fontFamily="@font/arial"
                    android:gravity="center"
                    android:padding="@dimen/size_5"
                    android:layout_marginTop="@dimen/size_12"
                    android:layout_marginLeft="@dimen/size_20"
                    android:layout_marginRight="@dimen/size_20"
                    android:textColor="@color/colorgrey"
                    android:textSize="@dimen/size_12"
                    />


                <TextView
                    android:id="@+id/tv_googlelogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/googlesignin"
                    android:textAllCaps="true"
                    android:fontFamily="@font/arialbd"
                    android:gravity="center"
                    android:drawableLeft="@drawable/ic_google"
                    android:background="@drawable/edt_bg"
                    android:padding="@dimen/size_12"
                    android:layout_marginBottom="@dimen/size_10"
                    android:layout_marginTop="@dimen/size_10"
                    android:layout_marginLeft="@dimen/size_20"
                    android:layout_marginRight="@dimen/size_20"
                    android:textColor="@color/colorgrey"
                    android:textSize="@dimen/size_14" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>